fix: fixed background on iOS

--- a/_assets/sass/components/_bg.scss
+++ b/_assets/sass/components/_bg.scss
@@ -39,8 +39,40 @@
   &--error-dark         { background-color: $error-dark; }
 
   &--img   { @include background-attributes; }
-  &--img-fixed   {
-    @include background-attributes;
-    background-attachment: fixed;
+  // &--img-fixed   {
+  //   @include background-attributes;
+  //   background-attachment: fixed;
+  // }
+  &__fixed {
+    position: relative;
+    &-wrap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: $z-background;
+      width: 100%;
+      height: 100%;
+      .svgclippaths & { clip: rect(0, auto, auto, 0); }
+    }
+    &-img {
+      position: absolute;
+      z-index: $z-background;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center top;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      .svgclippaths & {
+        position: fixed;
+        background-size: cover;
+        background-position: center;
+        background-attachment: scroll;
+        transform: translateZ(0);
+        will-change: auto;
+      }
+    }
   }
 }
